# Fish

./: pyproject.toml
fish/core/: run.py
fish/core/libs/: systemCommands.py  tool.py
