[tool.poetry]
name = "fish"
version = "0.1.0"
description = ""
authors = ["pl4xy <pl4xy@email.com>"]

[tool.poetry.dependencies]
python = "3.11.0"
riposte = "^0.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fish = "fish.core.run:main"